--- a/app/src/main/res/layout/news_activity.xml
+++ b/app/src/main/res/layout/news_activity.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="#666666"
-        android:dividerHeight="1px"
+        android:dividerHeight="2dp"
         android:orientation="vertical"
         tools:listitem="@layout/news_list_item"/>
 
