--- a/app/src/main/res/layout/news_list_item.xml
+++ b/app/src/main/res/layout/news_list_item.xml
@@ -2,13 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="75dp"
-    android:background="#EEEEEE"
+    android:layout_height="@dimen/list_item_height"
     android:orientation="vertical"
-    android:paddingBottom="5dp"
-    android:paddingLeft="12dp"
-    android:paddingRight="5dp"
-    android:paddingTop="5dp">
+    android:paddingBottom="@dimen/list_item_padding_top_bottom"
+    android:paddingLeft="@dimen/list_item_padding_left"
+    android:paddingRight="@dimen/list_item_padding_right"
+    android:paddingTop="@dimen/list_item_padding_top_bottom">
 
     <TextView
         android:id="@+id/item_category"
@@ -17,17 +16,18 @@
         android:layout_weight="1"
         android:textAllCaps="true"
         android:textStyle="bold"
-        tools:text="Politics, Sport" />
+        tools:text="Politics" />
 
     <TextView
         android:id="@+id/item_title"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1.6"
+        android:layout_weight="1.5"
         android:ellipsize="end"
         android:maxLines="1"
-        android:textColor="#000000"
-        android:textSize="18sp"
+        android:gravity="center_vertical"
+        android:textColor="@color/title_text_color"
+        android:textSize="@dimen/title_text_size"
         android:textStyle="bold"
         tools:text="Very long title that may be very very very long but shouldn't be longer than 1 line." />
 
@@ -36,7 +36,9 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        tools:text="25.05.18 17:51 | Bob and his friends" />
+        android:ellipsize="end"
+        android:maxLines="1"
+        tools:text="25.05.18 17:51 | Bob, Bobby" />
 
 
 </LinearLayout>
