--- a/app/src/main/res/layout/news_activity.xml
+++ b/app/src/main/res/layout/news_activity.xml
@@ -19,6 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:gravity="center_horizontal"
         android:text=""
         android:textSize="@dimen/no_news_text_size"
         android:textStyle="bold" />
